<resources>
    <string name="app_name">TajiProject</string>
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="page_towercrane">塔机状态</string>
    <string name="page_constructionsite">工地监控</string>
    <string name="page_configure">塔机配置</string>
    <string name="page_history">历史记录</string>
    <string name="page_diagram">数据图表</string>
    <string name="page_setting">系统设置</string>

    <string name="floatbtn_monitor">监控视角</string>
    <string name="floatbtn_2d">2 D 视角</string>
    <string name="floatbtn_3d">3 D 视角</string>
    <string name="floatbtn_loading">加载中</string>

    <string name="infopanel_title_runningstatus">运行状态</string>
    <string name="infopanel_title_towerdata">塔机信息</string>
    <string name="infopanel_title_envdata">环境信息</string>
    <string name="infopanel_title_developer">开发者选项</string>

    <string name="tower_data_item_id">塔机# :</string>
    <string name="tower_data_item_model">机型 :</string>
    <string name="tower_data_item_x">坐标X :</string>
    <string name="tower_data_item_y">坐标Y :</string>
    <string name="tower_data_item_frontarm">前臂长 :</string>
    <string name="tower_data_item_reararm">后臂长 :</string>
    <string name="tower_data_item_height">高度 :</string>
    <string name="tower_data_item_trolleydistance">小车行距 :</string>
    <string name="tower_data_item_ropelength">吊绳长度 :</string>
    <string name="tower_data_item_angle">旋臂角度 :</string>
    <string name="tower_data_item_limiter_liftweight">起升重量限制器 :</string>
    <string name="tower_data_item_limiter_liftheight">起升高度限制器 :</string>
    <string name="tower_data_item_limiter_torque">力矩限制器 :</string>
    <string name="tower_data_item_limiter_overstroke">行程限制器 :</string>
    <string name="tower_data_item_limiter_slewing">回转限制器 :</string>

    <string name="env_data_item_x">X轴距 :</string>
    <string name="env_data_item_y">Y轴距 :</string>
    <string name="env_data_item_windspeed">风速 :</string>
    <string name="env_data_item_temperature">温度 :</string>

    <string name="developer_options_add_towercrane">添加测试塔机</string>
    <string name="developer_options_remove_towercrane">删除当前塔机</string>
    <string name="developer_options_wireless_transmission_text">无线收发</string>
    <string name="developer_options_single_run_text">单塔模拟运行</string>
    <string name="developer_options_all_run_text">群塔模拟运行</string>
    <string name="developer_options_show_debug_3d_button">显示3d调试按钮</string>
    <string name="developer_options_editable_text">数据面板可编辑</string>
</resources>
